Fix footer covering content

--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,8 @@ body {
   color: #989898;
   display: flex;
   flex-direction: column;
-  margin-bottom: 100px;
+  margin-bottom: 87px;
+  clear: both;
 }
 
 .container {
